--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -213,5 +213,14 @@
   },
   "testConnectionButton": {
     "message": "測試連接"
+  },
+  "toggleBrowserControl": {
+    "message": "切換下載接管"
+  },
+  "enableBrowserControl": {
+    "message": "啟用下載接管"
+  },
+  "disableBrowserControl": {
+    "message": "停用下載接管"
   }
 } 
